PFDS 2020: fix compilation

--- a/papers/pfds2020/06lazy.tex
+++ b/papers/pfds2020/06lazy.tex
@@ -30,7 +30,7 @@
 \end{frame}
 
 \begin{frame}{Пример: фибоначчи}
-Пусть будет функция $\texttt{zip}: stream\times stream \rightarrow stream$, которая складывает потоки поэлементно
+Пусть будет функция $\texttt{zip}: stream\times stream \rightarrow stream$, которая складывает потоки поэлементно.\\
 
 Поток чисел фибоначчи описывается так:
 \[
