--- a/papers/pfds2020/tikzpics/array2.tex
+++ b/papers/pfds2020/tikzpics/array2.tex
@@ -1,5 +1,5 @@
 \documentclass[tikz]{standalone}
-\input{fontawe}
+\input{../fontawe}
 
 \usepackage{tikz}
 \usetikzlibrary{positioning,trees,decorations.pathreplacing}
