Trying to upgrade slides
Signed-off-by: Kakadu <Kakadu@pm.me>

--- a/papers/proyoneda/heading.tex
+++ b/papers/proyoneda/heading.tex
@@ -1,134 +1,17 @@
-\usepackage{xcolor}
-\definecolor{YellowGreen} {HTML}{B5C28C}
-\definecolor{ForestGreen} {HTML}{009B55}
-\definecolor{MyBackground}{HTML}{F0EDAA}
+\makeatletter
+\@ifclassloaded{beamer}{
+  % get rid of header navigation bar
+  \setbeamertemplate{headline}{}
+  % get rid of bottom navigation symbols
+  \setbeamertemplate{navigation symbols}{}
+  % get rid of footer
+  %\setbeamertemplate{footline}{}
+  \setbeamertemplate{section in toc} {\inserttocsectionnumber.~\inserttocsection}
 
-\usepackage{xltxtra} % load xunicode
-\usepackage{polyglossia}
-\setmainlanguage{russian}
-\setotherlanguage{english}
-
-% \usepackage[\eu@zf@math]{fontspec}
-% \usepackage{amsmath}
-% \usepackage{xkeyval}
-% \usepackage{mathstyle}
-% \usepackage{etoolbox}
-% \usepackage{mathspec}
-% \usepackage{inconsolata}
-
-\let\cyrillicfonttt\monofamily
-%\newfontfamily\dejaVuSansMono{DejaVu Sans Mono}
-% Moanco fonts from. Without second links you will not see bold face
-% https://github.com/vjpr/monaco-bold/raw/master/MonacoB/MonacoB.otf
-% https://github.com/vjpr/monaco-bold/raw/master/MonacoB/MonacoB-Bold.otf
-% \newfontfamily\monacoB{MonacoB}
- \newfontfamily\monacoFamily {MonacoB}[SizeFeatures={Size=8}]
-% \newfontfamily\monacoFamilyB{MonacoB}[SizeFeatures={Size=16},Style=Bold]
-% \setmonofont{MonacoB}[SizeFeatures={Size=10 }]
-% \newfontfamily\codeNewRoman{CodeNewRoman}
-% \newfontfamily\Hack                {Hack}
-% \newfontfamily\HackB[Style=Bold]   {Hack}
-% \newfontfamily\HackI[Style=Italic] {Hack}
-
-\usepackage{listings}
-% \lstdefinestyle{style1}{
-%   language=haskell,
-%   numbers=left,
-%   stepnumber=1,
-%   numbersep=10pt,
-%   tabsize=4,
-%   showspaces=false,
-%   showstringspaces=false
-% }
-\lstdefinestyle{hsstyle1}
-         { showstringspaces=false
-         , language=haskell
-         , keywords={ import,data,type,class,where
-                    , instance,case,of,do,family
-                    , deriving,if,then,else,forall,exists
-                    }
-         , deletekeywords={Int,Bool,Float,String,List,Either,Void,id,tail}
-         %, basicstyle=\monacoB
-%          , showspaces=false
-%          , showstringspaces=false
-%          , columns=fixed 
-%          , breaklines=true
-         %, columns=fullflexible
-          , escapeinside=§§
-%           , escapebegin=\begin{russian}\monacoB\color{DarkGreen}
-%           , escapeend=\end{russian}
-          , escapebegin=\begin{russian}\color{red}
-          , escapeend=\end{russian}
-          , commentstyle=\color{DarkGreen}
-%          , escapebegin=\begin{russian}\monacoB\color{ForestGreen}
-%          , escapeend=\end{russian}
-         , mathescape=true
-%          , backgroundcolor = \color{MyBackground}
 }
-
-\newcommand{\inline}[1]{\lstinline{haskell}{#1}}
-\def\hsinline{\lstinline[style={hsstyle1}]}
-\def\inline{\hsinline}
-\def\myinline{\lstinline[basicstyle=\monacoB]}
-\def\hline{\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}}
-
-% \renewcommand{\vskip}{\vspace{1cm}}
-
-
-\lstnewenvironment{hslisting} {
-     \lstset { style={hsstyle1} }
-  }
-  {}
-  
-\lstset
-  { language=haskell
-  , basicstyle  =\ttfamily %\bfseries\monacoFamily
-  , stringstyle =\ttfamily %\bfseries\monacoFamily
-  , keywordstyle=\ttfamily\bfseries %\monacoFamily
-  , showstringspaces=false       % no special string spaces
-  , keywords={ import,data,type,class,where
-             , instance,case,of,do,family
-             , deriving,if,then,else,forall
-             }
-  }
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
-\setmainfont[
- Ligatures=TeX,
- Extension=.otf,
- BoldFont=cmunbx,
- ItalicFont=cmunti,
- BoldItalicFont=cmunbi,
-]{cmunrm}
-% С засечками (для заголовков)
-\setsansfont[
- Ligatures=TeX,
- Extension=.otf,
- BoldFont=cmunsx,
- ItalicFont=cmunsi,
-]{cmunss}
-% \setmonofont[]{Hack}
-% next line fixed error
-% (polyglossia) Please define \cyrillicfont with \newfontfamily.
-\newfontfamily{\cyrillicfonttt}{MonacoB}
-% \newfontfamily{\cyrillicfonttt}{\monacoFamily}
-
-\usepackage{times}
-\usepackage{tikz}
-\usetikzlibrary{cd}
-% \usepackage{tikz-cd}
-
-%\DeclareMathOperator{->}{\rightarrow}
-\newcommand\iso{\ensuremath{\cong}}
-\usepackage{verbatim}
-\usepackage{graphicx}
-\usetikzlibrary{arrows,shapes}
-\usepackage{verbatimbox} % for verbnobox
-
-\newcommand*{\arr}{\ensuremath{\rightarrow}}
-\newcommand*{\natarr}{\ensuremath{\overset{\text{\normalsize .}}\longrightarrow}}
-
+{}
+\makeatother
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage{fontawesome}
 % \newfontfamily{\FA}{Font Awesome 5 Free} % some glyphs missing
 \expandafter\def\csname faicon@facebook\endcsname{{\FA\symbol{"F09A}}}
@@ -141,18 +24,212 @@
 \def\faCheckEmpty{{\FA\symbol{"F096}}}
 \def\faBookmarkEmpty{{\FA\symbol{"F097}}}
 
-
 \newcommand{\faGood}{\textcolor{ForestGreen}{\faThumbsUp}}
 \newcommand{\faBad}{\textcolor{red}{\faThumbsODown}}
-\newcommand{\usefulExercise}{\textcolor{red}{\faPlus}}
+\newcommand{\faWrong}{\textcolor{red}{\faTimes}}
+\newcommand{\faMaybe}{\textcolor{blue}{\faQuestion}}
+\newcommand{\faCheckGreen}{\textcolor{ForestGreen}{\faCheck}}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\usepackage{fontspec}
+\usepackage{xunicode}
+\usepackage{xltxtra}
+\usepackage{xecyr}
+\usepackage{hyperref}
+
+\setmainfont[
+ Ligatures=TeX,
+ Extension=.otf,
+ BoldFont=cmunbx,
+ ItalicFont=cmunti,
+ BoldItalicFont=cmunbi,
+% Scale = 1.1
+]{cmunrm}
+\setsansfont[
+ Ligatures=TeX,
+ Extension=.otf,
+ BoldFont=cmunsx,
+ ItalicFont=cmunsi,
+%  Scale = 1.2
+]{cmunss}
+%\setmainfont[Mapping=tex-text]{DejaVu Serif}
+%\setsansfont[Mapping=tex-text]{DejaVu Sans}
+%\setmonofont{Fira Code}[Contextuals=AlternateOff]
+\setmonofont{Fira Code}[Contextuals=Alternate,Scale=0.9]
+\newfontfamily{\myfiracode}[Scale=1.5,Contextuals=Alternate]{Fira Code}
+%\setmonofont[Scale=0.9,BoldFont={Inconsolata Bold}]{Inconsolata}
+
+\usepackage{polyglossia}
+\setmainlanguage{russian}
+\setotherlanguage{english}
+
+
+%\newfontfamily\dejaVuSansMono{DejaVu Sans Mono}
+% https://github.com/vjpr/monaco-bold/raw/master/MonacoB/MonacoB.otf
+%\newfontfamily\monacoB{MonacoB}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%5
 \usepackage{soul} % for \st that strikes through
 \usepackage[normalem]{ulem} % \sout
 
-% \usepackage{minted}
-% \newcommand{\inline}[1]{\mintinline{haskell}{#1}}
+\usepackage{stmaryrd}
+\newcommand{\sem}[1]{\ensuremath{\llbracket #1\rrbracket}}
 
-% \hypersetup{%
-%   linkbordercolor=blue
-% }
-% \usepackage[colorlinks=true, linkcolor=blue]{hyperref} 
+% We should use the following commands as \ocaml{} to prevent chewing
+% extra space
+\newcommand{\ocaml}{\textsc{OCaml}}
+\newcommand{\OCaml}{\ocaml}
+\newcommand{\haskell}{\textsc{Haskell}}
+\newcommand{\Haskell}{\haskell}
+
+\usepackage{listings}
+%\lstdefinestyle{style1}{
+%  language=haskell,
+%  numbers=left,
+%  stepnumber=1,
+%  numbersep=10pt,
+%  tabsize=4,
+%  showspaces=false,
+%  showstringspaces=false
+%}
+%\lstdefinestyle{hsstyle1}
+%{ language=haskell
+%%          , basicstyle=\monacoB
+%         , deletekeywords={Int,Float,String,List,Void}
+%         , breaklines=true
+%         , columns=fullflexible
+%         , commentstyle=\color{ForestGreen}
+%         , escapeinside=§§
+%         , escapebegin=\begin{russian}\commentfont
+%         , escapeend=\end{russian}
+%         , commentstyle=\color{ForestGreen}
+%         , escapeinside=§§
+%         , escapebegin=\begin{russian}\color{ForestGreen}
+%         , escapeend=\end{russian}
+%         , mathescape=true
+%%          , backgroundcolor = \color{MyBackground}
+%}
+%
+%\newcommand{\inline}[1]{\lstinline{haskell}{#1}}
+%\def\hsinline{\mintinline{haskell}}
+%\def\inline{\hsinline}
+%
+%\lstnewenvironment{hslisting} {
+%    \lstset { style={hsstyle1} }
+%  }
+%  {}
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%\setmainfont[
+%% Ligatures=TeX,
+%% Extension=.otf,
+%% BoldFont=cmunbx,
+%% ItalicFont=cmunti,
+%% BoldItalicFont=cmunbi,
+%%]{cmunrm}
+%%% С засечками (для заголовков)
+%%\setsansfont[
+%% Ligatures=TeX,
+%% Extension=.otf,
+%% BoldFont=cmunsx,
+%% ItalicFont=cmunsi,
+%%]{cmunss}
+%% \setmonofont[Scale=0.6]{Monaco}
+%
+%\usefonttheme{professionalfonts}
+%\usepackage{times}
+\usepackage{tikz}
+\usetikzlibrary{cd}
+\usepackage{tikz-cd}
+\usepackage{caption}
+\usepackage{subcaption}
+
+%\renewtheorem{definition}{برهان}[chapter]
+%%\DeclareMathOperator{->}{\rightarrow}
+%\newcommand\iso{\ensuremath{\cong}}
+%\usepackage{verbatim}
+%\usepackage{graphicx}
+%\usetikzlibrary{arrows,shapes}
+
+%\usepackage{amsmath}
+%\usepackage{amsfonts}
+\usepackage{scalerel}
+\DeclareMathOperator*{\myvee}{\scalerel*{\vee}{\sum}}
+\DeclareMathOperator*{\mywedge}{\scalerel*{\wedge}{\sum}}
+
+%
+%\usepackage{tabulary}
+%
+%% sudo aptget install ttf-mscorefonts-installer
+%%\setmainfont{Times New Roman}
+%%\setsansfont[Mapping=tex-text]{DejaVu Sans}
+%
+%%\setmonofont[Scale=1.0,
+%%    BoldFont=lmmonolt10-bold.otf,
+%%    ItalicFont=lmmono10-italic.otf,
+%%    BoldItalicFont=lmmonoproplt10-boldoblique.otf
+%%]{lmmono9-regular.otf}
+%
+\usepackage[cache=true]{minted}
+\usemintedstyle{perldoc}
+
+\def\hsinline{\mintinline{haskell}}
+\def\mlinline{\mintinline[escapeinside=||]{ocaml}}
+% color options
+\definecolor{YellowGreen} {HTML}{B5C28C}
+\definecolor{ForestGreen} {HTML}{009B55}
+\definecolor{MyBackground}{HTML}{F0EDAA}
+
+
+\author{Косарев Дмитрий}
+\institute{матмех СПбГУ}
+
+\addtobeamertemplate{title page}{}{
+  \begin{center}{\tiny Дата сборки: \today}\end{center}
+}
+
+\let\thefootnote\relax\footnotetext{Put your text here}
+\DeclareMathOperator{\arr}{\rightarrow}
+
+\usepackage{listings}
+
+\lstnewenvironment{hslisting} {
+       \lstset { style={hsstyle1} }
+    }
+  {}
+\lstdefinestyle{hsstyle1}
+         { showstringspaces=false
+           , language=haskell
+           , keywords={ import,data,type,class,where
+                        , instance,case,of,do,family
+                        , deriving,if,then,else,forall,exists
+                        }
+           , deletekeywords={Int,Bool,Float,String,List,Either,Void,id,tail}
+           %, basicstyle=\monacoB
+  %          , showspaces=false
+  %          , showstringspaces=false
+  %          , columns=fixed
+  %          , breaklines=true
+           %, columns=fullflexible
+            , escapeinside=§§
+  %           , escapebegin=\begin{russian}\monacoB\color{DarkGreen}
+    %           , escapeend=\end{russian}
+            , escapebegin=\begin{russian}\color{red}
+              , escapeend=\end{russian}
+            , commentstyle=\color{green}
+  %          , escapebegin=\begin{russian}\monacoB\color{ForestGreen}
+    %          , escapeend=\end{russian}
+           , mathescape=true
+  %          , backgroundcolor = \color{MyBackground}
+  }
+
+\lstset
+  { language=haskell
+    , basicstyle  =\ttfamily %\bfseries\monacoFamily
+    , stringstyle =\ttfamily %\bfseries\monacoFamily
+    , keywordstyle=\ttfamily\bfseries %\monacoFamily
+    , showstringspaces=false       % no special string spaces
+    , keywords={ import,data,type,class,where
+                 , instance,case,of,do,family
+                 , deriving,if,then,else,forall
+                 }
+    }
