Update slides about PFDS
Signed-off-by: Kakadu <Kakadu@pm.me>

--- a/papers/pfds2020/06lazy.tex
+++ b/papers/pfds2020/06lazy.tex
@@ -34,7 +34,7 @@
 
 Поток чисел фибоначчи описывается так:
 \[
-fibs \equiv \cons{1}{zip(fibs, tail(fibs))}
+fibs \equiv \cons{1}{\ \cons{1}{\ zip(fibs,\ tail(fibs))}}
 \]
 \begin{center}
 
