--- a/papers/pfds2020/06trees.tex
+++ b/papers/pfds2020/06trees.tex
@@ -31,7 +31,7 @@
   \includegraphics{tikzpics/fig.2.8.after.pdf}\par
 \end{minipage}
 \end{minipage}
-Выполнение \texttt{ys $\equiv$ add("e",xs)}.\\
+Выполнение \texttt{ys $\equiv$ add(``e'', xs)}.\\
 
 Для большинства деревьев путь, который надо изменить, содержит лишь небольшую долю узлов в дереве. Громадное
 большинство узлов будет находиться в совместно используемых поддеревьях.
@@ -43,30 +43,30 @@
 \begin{definition}[Двоичные деревья поиска]
 Двоичные деревья, в которых элементы cимметричном
  (symmetric) порядке, то есть, элемент в каждом узле больше любого элемента в левом поддереве
-этого узла и меньше любого элемента в правом поддереве. 
+этого узла и меньше любого элемента в правом поддереве.
 \end{definition}
 \end{frame}
 
 \begin{frame}{Двоичные деревья поиска: вставка}
-Например, пусть двоичное дерево поиска каких-то значений -- это 
+Например, пусть двоичное дерево поиска каких-то значений -- это
 \begin{itemize}
 \item Либо лист без значений
 \item Либо узел, который хранит значение и двое других двоичных деревьев поиска
 \end{itemize}
 \vspace{1em}
 
-Функция \mlinline{insert: tree*int -> tree} вставки значения $x$ в дерево:
+Функция \mlinline{insert: tree * int -> tree} вставки значения $x$ в дерево:
 \begin{itemize}
 \item Вставка в пустое дерево тривиальна
 \item Иначе наше дерево -- это узел из значения $y$ и двух других поддеревьев \mlinline{l} и \mlinline{r}
 \begin{itemize}
 \item Если $x<y$, то ответ -- это дерево из $y$, \mlinline{insert x l} и \mlinline{r}
-\item Если $x>y$, то ответ -- это дерево из $y$, \mlinline{l} и \mlinline{insert x r} 
+\item Если $x>y$, то ответ -- это дерево из $y$, \mlinline{l} и \mlinline{insert x r}
 \item Иначе не нужно добавлять, дерево из $y$, \mlinline{l} и \mlinline{r} -- это ответ
 \end{itemize}
 \end{itemize}
 \vspace{2em}
-Функция \mlinline{member: tree*int -> bool} пишется аналогично
+Функция \mlinline{member: tree * int -> bool} пишется аналогично
 \end{frame}
 
 %
@@ -83,7 +83,7 @@
 
 \begin{frame}{Красно-чёрные деревья}
 Двоичные деревья поиска хорошо ведут себя на случайных или неупорядоченных данных,
-однако на упорядоченных данных их производительность резко падает, и
+однако на упорядоченных их производительность резко падает, и
 каждая операция может занимать до $O(n)$  времени. \\
 
  Решение этой
@@ -133,22 +133,22 @@
 
 
 \begin{frame}{Вставка делается нетривиально}
-%Например, пусть двоичное дерево поиска каких-то значений -- это 
+%Например, пусть двоичное дерево поиска каких-то значений -- это
 %\begin{itemize}
 %\item Либо лист без значений
 %\item Либо узел, который хранит значение и двое других двоичных деревьев поиска
 %\end{itemize}
 %\vspace{1em}
 
-Функция \mlinline{insert: tree*int -> tree} вставки значения $x$ в дерево реализуется с помощью функции 
+Функция \mlinline{insert: tree*int -> tree} вставки значения $x$ в дерево реализуется с помощью функции
 \mlinline{balance}:
 \begin{itemize}
 \item Вставка в пустое дерево тривиальна
 \item Иначе вставляем в  дерево, которое состоит из: значения $y$, цвета $c$ и двух других поддеревьев \mlinline{l} и \mlinline{r}
 \begin{itemize}
 \item Если $x=y$, то возвращаем дерево как есть
-\item Если $x<y$, нужно вызвать \mlinline{balance(c, insert x l, y, r)} 
-\item Если $x>y$, нужно вызвать \mlinline{balance(c, l, y, insert x r)} 
+\item Если $x<y$, нужно вызвать \mlinline{balance(c, insert x l, y, r)}
+\item Если $x>y$, нужно вызвать \mlinline{balance(c, l, y, insert x r)}
 \end{itemize}
 \end{itemize}
 \vspace{2em}
@@ -231,9 +231,9 @@
 %\begin{remark}
 %  Одна из причин, почему наша реализация выглядит настолько проще, чем
 %  типичное описание красно-чёрных деревьев, состоит в том, что мы
-%  используем несколько другие преобразования перебалансировки. 
+%  используем несколько другие преобразования перебалансировки.
 %  \vspace{1em}
-%  
+%
 %  В императивных реализациях обычно наши четыре проблематичных случая
 %  разбиваются на восемь, в зависимости от цвета узла, соседствующего с
 %  красной вершиной с красным ребёнком.  Знание цвета этого узла в
@@ -270,7 +270,7 @@
 
 Если сжать их до максимума, то структура начнет напоминать массив\\
 
-%На практике количесво 
+%На практике количесво
 \end{subfigure}\hspace{0em}
 \begin{subfigure}[t]{.65\textwidth}\vspace{0em}
 \begin{center}
@@ -286,9 +286,9 @@
 \begin{subfigure}{.39\textwidth}
 Конечное отображение (map)
 \begin{itemize}
-\item $63=11111_2\mapsto$ Bauer 
-\item $31=01111_2\mapsto$ Baum 
-\item $02=00010_2\mapsto$ Hof 
+\item $63=11111_2\mapsto$ Bauer
+\item $31=01111_2\mapsto$ Baum
+\item $02=00010_2\mapsto$ Hof
 \item $71=100111_2\mapsto$ Huhn
 \item $39=010111_2\mapsto$ Hund
 \end{itemize}
