--- a/papers/pfds2020/heading.tex
+++ b/papers/pfds2020/heading.tex
@@ -113,8 +113,8 @@
 %    \lstset { style={hsstyle1} }
 %  }
 %  {}
-%  
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%\setmainfont[
 %% Ligatures=TeX,
 %% Extension=.otf,
@@ -173,12 +173,12 @@
 \usepackage{verbatimbox}
 
 
-\author{Косарев Дмитрий}
-\institute{JetBrains Reasearch, Лаборатория языковых инструментов\\матмех СПбГУ}
-
-\addtobeamertemplate{title page}{}{
-  \begin{center}{\tiny Дата сборки: \today}\end{center}
-}
+%\author{Косарев Дмитрий}
+%\institute{JetBrains Reasearch, Лаборатория языковых инструментов\\матмех СПбГУ}
+%
+%\addtobeamertemplate{title page}{}{
+%  \begin{center}{\tiny Дата сборки: \today}\end{center}
+%}
 
 
 %\makeatletter
@@ -210,11 +210,11 @@
 %
 %\usepackage{fontspec}
 %
-%\defaultfontfeatures{Ligatures={TeX}} 
+%\defaultfontfeatures{Ligatures={TeX}}
 %\setmainfont{Times New Roman}
 %\setsansfont{CMU Sans Serif}
 %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\setmainfont[
 % Ligatures=TeX,
 % Extension=.otf,
@@ -232,7 +232,7 @@
 %\newfontfamily{\myfiracode}[Scale=1.5,Contextuals=Alternate]{Fira Code}
 %
 %%\newfontfamily\cyrillicfont[Script=Cyrillic]{Charis SIL}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %
 %\usepackage{listings}
@@ -287,7 +287,7 @@
 %\usepackage{listings}
 %\def\mlinline{\lstinline[language=ocaml]}
 
-% TODO: minted и lstlisting дают ту же производительность компиляции. 
+% TODO: minted и lstlisting дают ту же производительность компиляции.
 % Разобраться должно ли быть так
 
 %
@@ -295,7 +295,7 @@
 %    \lstset { style={hsstyle1} }
 %  }
 %  {}
-%  
+%
 %
 %\usefonttheme{professionalfonts}
 %\usepackage{times}
